// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets licenses from package attribute #1 object 1`] = `
{
  "infos": [
    {
      "license": "ISC",
    },
  ],
  "license": "ISC",
}
`;

exports[`gets licenses from package attribute #2 object 1`] = `[TypeError: can't parse license]`;

exports[`gets licenses from package attribute #3 MIT OR GPL-2.0 AND ISC 1`] = `[Error: can't unambiguously parse license definition]`;

exports[`gets licenses from package attribute #4 BSD-3-Clause 1`] = `
{
  "infos": [
    {
      "license": "BSD-3-Clause",
    },
  ],
  "license": "BSD-3-Clause",
}
`;

exports[`gets licenses from package attribute #5 (MIT AND (LGPL-2.1+ AND BSD-3-Clause WITH GPL-3.0-linking-exception)) 1`] = `
{
  "infos": [
    {
      "exception": "GPL-3.0-linking-exception",
      "license": "BSD-3-Clause",
    },
    {
      "license": "LGPL-2.1",
      "plus": true,
    },
    {
      "license": "MIT",
    },
  ],
  "license": "(MIT AND (LGPL-2.1+ AND BSD-3-Clause WITH GPL-3.0-linking-exception))",
}
`;

exports[`gets licenses from package attribute #6 (ISC OR (GPL-2.0+)) 1`] = `[Error: found multiple license options]`;

exports[`gets licenses from package attribute #7 See LICENSE.md 1`] = `[Error: can't parse license definition]`;
